# medical-license-validator

./: README.md
backend/: .gitignore  pyproject.toml  requirements.txt
backend/backend/: app.py  server.py
backend/backend/config/: lifespan.py  main.py
backend/backend/constants/: enums.py  regex.py
backend/backend/controller/: agent.py  main.py
backend/backend/controller/agents/: classifier_agent.py  credential_agent.py  credibility_agent.py  crosscheck_agent.py  verification_agent.py
backend/backend/mock/: board_certificate_data.json  degree_certificate_data.json  medical_licence_data.json  training_certificate_data.json
backend/backend/models/: ReportHistory.py  Token.py  User.py
backend/backend/routes/: index.py
backend/backend/security/: jsonwebtoken.py
backend/backend/utils/: embeddings.py  file_reader.py  generate_random_string.py  pydanticToFormError.py
backend/backend/validations/: main.py
frontend/: README (1).md  index.html  local.env  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/config/: index.js
frontend/src/helper/: HelperWrapper.jsx  RouteCondition.jsx
frontend/src/pages/: Dashboard.jsx  ReportView.jsx  Signin.jsx  Signup.jsx
frontend/src/redux/: mainReducer.js  store.js
frontend/src/redux/slices/: auth.slice.js
frontend/src/routes/: MainRoutes.jsx
